2006-09-09  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/map.cpp: Removed being collisions. Fixed wrong heuristic cost
	of the pathfinder.

2006-09-02  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/serverdialog.cpp, src/main.cpp: Fixed crash when using short
	versions of server and port command line options and made sure
	cancelling the account server connect shows the server dialog.

2006-09-02  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/localplayer.cpp, src/beingmanager.h, src/beingmanager.cpp,
	src/npc.cpp, src/player.cpp, src/monster.h, src/being.cpp, src/npc.h,
	src/monster.cpp, src/player.h, src/net/beinghandler.cpp, src/being.h,
	src/net/charserverhandler.cpp, src/net/protocol.h, src/localplayer.h,
	src/net/chathandler.cpp: Switched to short IDs for beings.
	* src/net/messagein.h, src/net/beinghandler.cpp, src/net/protocol.h,
	src/net/messagein.cpp: Removed pixel-based synchronisation. Added
	variable length move messages.

2006-09-01  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/serverdialog.cpp, src/gui/serverdialog.h, src/net/network.h:
	Fixed some header issues.
	* The Mana World.dev, tmw.cbp: Updated project files.

2006-08-30  Yohann Ferreira  <bertram@cegetel.net>

	* src/main.cpp, src/main.h, src/Makefile.am, src/gui/connection.h,
	src/gui/connection.cpp, src/gui/serverdialog.cpp,
	src/gui/serverdialog.h: Added a first version of the server dialog
	with an unskinned dropdown. Upgraded also the connection window a bit
	to handle Cancelling more gracefully.

2006-08-27  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/engine.cpp, src/gui/gui.cpp: Fixed merge issues: printfs and
	inconsistency between view and camera variables. Fixed lazy scrolling:
	there is no "freaking out" when the correct function is used.

2006-08-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp: Fixed crash when map is not loaded yet.
	* src/net/beinghandler.cpp, src/net/protocol.h: Added support for